--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,10 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  region: us-west-1
-  app: multi-docker
-  env: MultiDocker-env
-  bucket_name: elasticbeanstalk-us-west-1-306476627547
+  region: eu-west-2
+  app: multi-container-docker
+  env: MultiContainerDocker-env
+  bucket_name: elasticbeanstalk-eu-west-2-978994261530
   bucket_path: docker-multi
   on:
     branch: master
